# yinsh

./: Cargo.toml  LICENSE  README.md  build_web.sh  yinsh.wasm
.github/workflows/: rust.yml
src/: board.rs  entities.rs  game.rs  lib.rs  main.rs
src/core/: actions.rs  ai.rs  board.rs  command.rs  coord.rs  entities.rs  game.rs  mod.rs  state.rs
src/frontend/: board_builder.rs  config.rs  element.rs  events.rs  frontend.rs  mod.rs  mouse.rs  presenter.rs
src/frontend/elements/: allowed_moves_indicator.rs  board.rs  field_marker.rs  mod.rs  primitives.rs  restart_window.rs  run_indicator.rs  token.rs  token_animation.rs
src/game/: board.rs  coord.rs  game.rs  mod.rs  screen.rs
src/www/: index.html
