[package]
name = "yinsh"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum_dispatch = "0.3.11"
enumset = "1.0.12"
itertools = "0.10.5"
macroquad = "0.3"
num = "0.4.0"
